
  NEW FEATURES

    HIVE-337. LazySimpleSerDe to support multi-level nested array, map, struct
    types. (zshao)

    HIVE-313. Add UDF date_add, date_sub, datediff. (zshao)

    HIVE-79. Print number of rows inserted to table(s).
    (Suresh Antony via zshao)

    HIVE-30. Hive Web User Interface. (Edward Capriolo via athusoo)

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HIVE-339. Fix count distinct in 1 map-reduce job with map side
    aggregation. (Namit Jain via zshao)

    HIVE-271. Move test-udfs creation to build-common in order to
    fix broken 0.17 build. (athusoo)
    
    HIVE-286. Use round(xxx,12) to make sure there is no precision
    matching problem in testCliDriver_udf7. (zshao via johan)    

    HIVE-327. Fix row counts printed in hive history to reflect the
    count of rows from the query in the session. (Suresh Anthony via athusoo)

    HIVE-334. Make union3 test output deterministic.
    (Joydeep Sen Sarma via athusoo)

    HIVE-320. Fix intermittent nullpointer exception in count(DISTINCT).
    (Namit Jain via athusoo)

    HIVE-124. Fix empty aggregations to return 1 row instead of
    nothing. (namit)

    HIVE-347. Fix lot of partition scans in strict mode in case of error in 
    partition specification error. (namit)

    HIVE-251. Throw an error to the CLI if a user defined script fails in
    TRANSFORM, MAP or REDUCE commands. (athusoo) 

    HIVE-317. Fix HiveServer to accept 1 argument for port.
    (Min Zhou via athusoo)

    HIVE-285. Fix to disallow union of different schemas.
    (Raghotham Murthy via namit)

    HIVE-253. Fix to disallow computation of rand() at compilation stage.
    (Raghotham Murthy via namit)

    HIVE-350. Fix wrong order of aggregations in explain plan.
    (namit)

    HIVE-347. undo for Fix lot of partition scans in strict mode in case of error in 
    partition specification error. (namit)

    HIVE-319. Add UDF for unix timestamp. 
    (Hao Liu via namit)

Release 0.2.0 - Unreleased
