@@ -75,11 +75,13 @@ public class $className extends TestCase {
         Map<String, QueryInfo> jobInfoMap = hv.getJobInfoMap();
         Map<String, TaskInfo> taskInfoMap = hv.getTaskInfoMap();
 
-        String cmd = (String)jobInfoMap.keySet().toArray()[0];
-        QueryInfo ji = jobInfoMap.get(cmd);
+        if(jobInfoMap.size() != 0) {
+          String cmd = (String)jobInfoMap.keySet().toArray()[0];
+          QueryInfo ji = jobInfoMap.get(cmd);
 
-        if (!ji.hm.get(Keys.QUERY_RET_CODE.name()).equals("0")) {
-            fail("Wrong return code in hive history");
+          if (!ji.hm.get(Keys.QUERY_RET_CODE.name()).equals("0")) {
+              fail("Wrong return code in hive history");
+          }
         }
       }
 
